--- a/package.json
+++ b/package.json
@@ -26,18 +26,21 @@
     "autoprefixer": "6.5.0",
     "bootstrap-sass": "^3.3.7",
     "cssnano": "3.7.5",
+    "datatables": "1.10.12",
     "del": "2.2.2",
     "font-awesome": "4.6.3",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.0",
     "gulp-imagemin": "3.0.3",
+    "gulp-order": "1.1.1",
     "gulp-postcss": "6.2.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.3.2",
     "gulp-sourcemaps": "1.6.0",
     "gulp.spritesmith": "6.2.1",
     "gulp-uglify": "2.0.0",
-    "jquery": "3.1.1"
+    "jquery": "3.1.1",
+    "merge-stream": "1.0.0"
   },
   "devDependencies": {
     "gulp-jshint": "2.0.1",
