--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ Django==1.10.2
 python-social-auth==0.2.21
 django-bootstrap-form==3.2.1
 django-crispy-forms==1.6.0
+gunicorn==19.6.0
+psycopg2==2.6.2
