--- a/docker/config/nginx/nginx-portailva.conf
+++ b/docker/config/nginx/nginx-portailva.conf
@@ -11,7 +11,7 @@ server {
 
   location /static/ {
             autoindex on;
-            alias /app/dist/;
+            alias /app/static/;
          }
   listen 8000;
   server_name localhost;
