[Event] Event update with datetime picker

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cssnano": "3.8.0",
     "datatables": "1.10.12",
     "del": "2.2.2",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.43",
     "font-awesome": "4.7.0",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.0",
@@ -37,10 +38,11 @@
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.3.2",
     "gulp-sourcemaps": "2.2.0",
-    "gulp.spritesmith": "6.2.1",
     "gulp-uglify": "2.0.0",
+    "gulp.spritesmith": "6.2.1",
     "jquery": "3.1.1",
-    "merge-stream": "1.0.0"
+    "merge-stream": "1.0.0",
+    "moment": "^2.15.2"
   },
   "devDependencies": {
     "gulp-jshint": "2.0.1",
