--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
-# Explicit dependencies (references in code)
+cssselect==1.0.1
+cssutils==1.0.1
+defusedxml==0.4.1
 Django==1.10.3
-python-social-auth==0.2.21
-django-bootstrap-form==3.2.1
-django-crispy-forms==1.6.1
-gunicorn==19.6.0
-psycopg2==2.6.2
-python-magic==0.4.12
-gitpython==2.1.0
 django-anymail==0.6.1
-premailer==3.0.1
-djangorestframework==3.5.2
+django-bootstrap-form==3.2.1
 django-bootstrap3-datetimepicker-2==2.4.2
+django-ckeditor==5.2.1
+django-crispy-forms==1.6.1
+djangorestframework==3.5.2
+gitdb2==2.0.0
+GitPython==2.1.0
+gunicorn==19.6.0
+lxml==3.7.2
+oauthlib==2.0.1
+olefile==0.44
+Pillow==4.0.0
+premailer==3.0.1
+psycopg2==2.6.2
+PyJWT==1.4.2
+python-magic==0.4.12
+python-social-auth==0.2.21
+python3-openid==3.0.10
+requests==2.13.0
+requests-oauthlib==0.7.0
+six==1.10.0
+smmap2==2.0.1
+wheel==0.24.0
