--- a/docker/config/nginx/nginx-portailva.conf
+++ b/docker/config/nginx/nginx-portailva.conf
@@ -10,9 +10,15 @@ server {
   }
 
   location /static/ {
-            autoindex on;
-            alias /app/static/;
-         }
+    autoindex on;
+    alias /app/staticfiles/;
+  }
+
+  location /media/ {
+    autoindex on;
+    alias /app/mediafiles/;
+  }
+
   listen 8000;
   server_name localhost;
 }
