--- a/requirements.txt
+++ b/requirements.txt
@@ -11,13 +11,16 @@ django-crispy-forms==1.6.1
 django-pipeline==1.6.11
 django-premailer==0.2.0
 djangorestframework==3.5.2
+et-xmlfile==1.0.1
 futures==3.0.5
 gitdb2==2.0.0
 GitPython==2.1.0
 gunicorn==19.6.0
+jdcal==1.3
 lxml==3.7.2
 oauthlib==2.0.1
 olefile==0.44
+openpyxl==2.4.5
 Pillow==4.0.0
 premailer==3.0.0
 psycopg2==2.6.2
