--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Babel==2.3.4
 cssselect==1.0.1
 cssutils==1.0.1
 defusedxml==0.4.1
@@ -8,6 +9,9 @@ django-bootstrap-form==3.2.1
 django-bootstrap3-datetimepicker-2==2.4.2
 django-ckeditor==5.2.1
 django-crispy-forms==1.6.1
+django-model-utils==2.6.1
+django-notifications-hq==1.2
+django-phonenumber-field==1.1.0
 django-pipeline==1.6.11
 django-premailer==0.2.0
 djangorestframework==3.5.2
@@ -17,10 +21,12 @@ gitdb2==2.0.0
 GitPython==2.1.0
 gunicorn==19.6.0
 jdcal==1.3
+jsonfield==2.0.1
 lxml==3.7.2
 oauthlib==2.0.1
 olefile==0.44
 openpyxl==2.4.5
+phonenumberslite==8.3.3
 Pillow==4.0.0
 premailer==3.0.0
 psycopg2==2.6.2
@@ -28,6 +34,7 @@ PyJWT==1.4.2
 python-magic==0.4.12
 python-social-auth==0.2.21
 python3-openid==3.0.10
+pytz==2016.10
 requests==2.13.0
 requests-oauthlib==0.7.0
 six==1.10.0
