--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bootstrap-form==3.2.1
 django-bootstrap3-datetimepicker-2==2.4.2
 django-ckeditor==5.2.1
 django-crispy-forms==1.6.1
+django-dotenv==1.4.1
 django-pipeline==1.6.11
 django-premailer==0.2.0
 djangorestframework==3.5.2
@@ -16,6 +17,7 @@ futures==3.0.5
 gitdb2==2.0.0
 GitPython==2.1.0
 gunicorn==19.6.0
+icalendar==3.11.7
 jdcal==1.3
 lxml==3.7.2
 oauthlib==2.0.1
@@ -25,11 +27,12 @@ Pillow==4.0.0
 premailer==3.0.0
 psycopg2==2.6.2
 PyJWT==1.4.2
+python-dateutil==2.6.1
 python-magic==0.4.12
 python-social-auth==0.2.21
 python3-openid==3.0.10
+pytz==2017.2
 requests==2.13.0
 requests-oauthlib==0.7.0
 six==1.10.0
 smmap2==2.0.1
-wheel==0.24.0
