--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: nginx:latest
     container_name: nginx-django
     ports:
-      - "80:8000"
+      - "8000:8000"
     depends_on:
       - app
     volumes:
@@ -18,8 +18,9 @@ services:
     container_name: portailva
 
     environment:
-      - DJANGO_SETTINGS_MODULE=portailva.settings_prod
-      - DATABASE_URL=postgres://postgresql@postgresql/portailva
+      - DATABASE_URL=postgres://postgresql@postgres/portailva
+      - APP_DEBUG=True
+      - SITE_DNS=web
 
     depends_on:
       - db
